--- a/Parcial2/LayoutGrid/GridLayout.html
+++ b/Parcial2/LayoutGrid/GridLayout.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="contenedor">
-        <div id="header" class="caja">Titulo</div>
-        <div id="section" class="caja">Tema o Sección 1</div>
-        <div id="section2" class="caja">Tema o Sección 2</div>
-        <div id="section3" class="caja">Tema o Sección 3</div>
-        <div id="section4" class="caja">Tema o Sección 4</div>
-        <div id="footer" class="caja">Pie de Pagina</div>
+        <header id="titulo" class="caja">Titulo</header>
+        <section id="seccion1" class="caja">Tema o Sección 1</section>
+        <section id="seccion2" class="caja">Tema o Sección 2</section>
+        <section id="seccion3" class="caja">Tema o Sección 3</section>
+        <section id="seccion4" class="caja">Tema o Sección 4</section>
+        <footer id="piepagina" class="caja">Pie de Pagina</footer>
     </div>
 </body>
 </html>
