--- a/Pruebas/Prueba API.html
+++ b/Pruebas/Prueba API.html
@@ -10,6 +10,8 @@
         <button id="btn_PeticionFetch">BotonFetch</button>
         <button id="btn_PeticionAsyncAwait">BotonAsyncAwait</button>
         <button id="btn_PeticionXmlHttpReq">BotonXml</button>
+        <button id="btn_PeticionXmlHttpReq">BotonXml</button>
+        <button id="btn_PeticionXmlHttpReq">BotonXml</button>
         <img id="imagen">
 
         <script>
@@ -30,7 +32,7 @@
                         .then( datoJson => document.getElementById('imagen').src=datoJson.url)
             })
             
-            
+            document.getElementById("btn_PeticionAsyncAwait").addEventListener("click",function() {})
 
         </script>
     </body>
